--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "css-loader": "^0.18.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
+    "gulp": "^3.9.0",
+    "gulp-uglify": "^1.4.1",
     "image-webpack-loader": "^1.6.1",
     "imagemin": "^3.2.0",
     "style-loader": "^0.12.3",
