--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "name": "bundler",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
   "devDependencies": {
     "css-loader": "^0.18.0",
-    "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
     "gulp-uglify": "^1.4.1",
     "image-webpack-loader": "^1.6.1",
     "imagemin": "^3.2.0",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2"
+  },
+  "dependencies": {
+    "bower": "^1.5.3"
   }
 }
